test and refactor genetic algorithms